--- a/src/system/ui/upload/style.scss
+++ b/src/system/ui/upload/style.scss
@@ -1,12 +1,15 @@
 .fl-asst-file-drop {
 	display: flex;
-    flex: 1 1 auto;
-	overflow: scroll;
+    flex: 1 0 auto;
+	max-height: 100%;
+	min-height: 0;
 }
 
 .fl-asst-file-drop-content-view {
 	display: flex;
-	flex: 1 1 auto;
+	flex: 1 0 auto;
+	max-height: 100%;
+	min-height: 0;
 }
 
 .fl-asst-file-drop-dragging-view {
